to_do_item,categoryをscaffoldでモデルを作成した。

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= @test %></td>
+        <td><%= user.name %></td>
         <td><%= user.mail_address %></td>
         <td><%= user.pass_word %></td>
         <td><%= user.administrator %></td>
