--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
-<h1>Home#index</h1>
+<h1>Home</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
-<% #binding.pry %>
-
-<p>Find me in app/views/home/index.html.erb</p>
+<p> これはTo do app です </p>
+<li>
+   <%= link_to 'ユーザーページ',  users_path %>
+</li>
