--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,10 +7,16 @@
     <tr>
       <th>Name</th>
       <th>Mail address</th>
+<%
+=begin
+%>
       <th>Pass word</th>
       <th>Administrator</th>
       <th>State</th>
       <th colspan="3"></th>
+<%
+=end
+%>      
     </tr>
   </thead>
 
@@ -18,13 +24,21 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= user.mail_address %></td>
+        <td><%= user.email %></td>
         <td><%= user.pass_word %></td>
         <td><%= user.administrator %></td>
         <td><%= user.state %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+<%
+=begin
+%>
+              <td><%= #link_to 'Show', user %></td>
+              <td><%= #link_to 'Edit', edit_user_path(user) %></td>
+              <td><%= #link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<%
+=end
+%>
+
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +46,11 @@
 
 <br>
 
+<%
+=begin
+%>
 <%= link_to 'New User', new_user_path %>
+
+<%
+=end
+%>
