管理者ページ作成した その１ simple_calendarをbundle

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :mail_address %>
-    <%= form.text_field :mail_address %>
+    <%= form.label :email %>
+    <%= form.text_field :email %>
   </div>
 
   <div class="field">
-    <%= form.label :pass_word %>
-    <%= form.text_field :pass_word %>
+    <%= form.label :encrypted_password %>
+    <%= form.text_field :encrypted_password %>
   </div>
 
   <div class="field">
