--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,12 +1,10 @@
 <p> ここは、<%=@user.name%>さんのページです。
 </p>
 
-<h3>all To do </h3>
+<h3>all To do</h3>
 <%  @cate_does.each do |cate_do| %>
   <tr>
-  <td><%= cate_do[0] %></td>
   <td><%= cate_do[1] %></td>
-  <td><%= cate_do[2] %></td>
   <br>
   </tr>
 <% end %>
@@ -27,11 +25,18 @@
 <% end %>
 
 
-
-
+<i class="material_icons">alarm</i>
+<i class="material-icons md-36">alarm</i>
+<i class="material-icons md-36">star_border</i>
 <p> <%= link_to 'TO do', to_do_items_path %> </p>
 
 <ol>
+<%
+=begin
+%>
 <li><%= link_to 'ユーザー情報',  user_path(@user.id) %></li>
+<%
+=end
+%> 
 <li><%= link_to 'カテゴリー情報', user_category_path %></li>
 </ol>
