gem annotate, sidekiq brew redis を入れる userにroleカラム追加（adminisratorを削除) 管理者画面を制限 active_adminのCSS汚染（active_adminのassetが他にも適応されるのを修正 todoタイトルから詳細編集画面へ移動できるようにした

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,4 +3,9 @@
 
 <p> これはTo do app です </p>
 
-    <%= link_to 'ユーザーページ',  user_home_path %>
+<ul>
+  <li>  <%= link_to 'ユーザーページ',  user_home_path %> </li>
+       <%if @user.role == "admin" %>
+    <li>    <%= link_to 'アドミンページ',  admin_users_path %> </li>
+</ul>
+   <% end %>
