--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,21 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *= require material_icons
- *= require_tree .
+ *= require_tree ./main
  *= require_self
  */
 
 @import "bootstrap";
+
+
+input[type="text"], textarea{
+  box-sizing: border-box;
+  width: 400px;
+  padding: 5px;
+}
+
+.category_tab{
+
+  width: 100px;
+  height: 25px;
+}
