gem sinatra,redis-rails,redis redisにsessionを移す to_doの日付選択機能を追加

--- a/app/views/to_do_items/_form.html.erb
+++ b/app/views/to_do_items/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: to_do_item, local: true) do |form| %>
-  <% if to_do_item.errors.any? %>
+  <% if @to_do_item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(to_do_item.errors.count, "error") %> prohibited this to_do_item from being saved:</h2>
 
