--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -12,6 +12,19 @@
 <%= form_with model: ToDoItem.new do |f| %>
  <%= f.label :contents, "To_do追加" %>
  <%= f.text_field :title, placeholder: 'to do入力' %>
+<%= link_to to_do_item_calendar_path do %>
+     <i class="material-icons md-36">calendar_today</i>
+
+     <% if params[:to_do_item].nil? %>
+     <% else %>
+  <%= f.hidden_field :start_date, value: Time.zone.local(params[:to_do_item]["start_date(1i)"].to_i, params[:to_do_item]["start_date(2i)"].to_i, params[:to_do_item]["start_date(3i)"].to_i) %>
+    <%= f.hidden_field :start_time, value: Time.zone.local(params[:to_do_item]["start_time(1i)"].to_i, params[:to_do_item]["start_time(2i)"].to_i, params[:to_do_item]["start_time(3i)"].to_i, params[:to_do_item]["start_time(4i)"].to_i, params[:to_do_item]["start_time(5i)"].to_i) %>
+
+    <%= f.hidden_field :end_date, value: Time.zone.local(params[:to_do_item]["end_date(1i)"].to_i, params[:to_do_item]["end_date(2i)"].to_i, params[:to_do_item]["end_date(3i)"].to_i) %>
+      <%= f.hidden_field :end_time, value: Time.zone.local(params[:to_do_item]["end_time(1i)"].to_i, params[:to_do_item]["end_time(2i)"].to_i, params[:to_do_item]["end_time(3i)"].to_i, params[:to_do_item]["end_time(4i)"].to_i, params[:to_do_item]["end_time(5i)"].to_i) %>
+    <% end %>
+
+<% end %>
   <%= f.submit %>
  <br>
 <%= f.select :category_id, @category_selects,{:prompt => "category"}, {:class => "category_tab"} %>
@@ -31,6 +44,8 @@
 <i class="material-icons md-36">alarm</i>
 <i class="material-icons md-36">star_border</i>
 <p> <%= link_to 'TO do', to_do_items_path %> </p>
+
+
 
 <ol>
 <%
