--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,3 +28,8 @@ input[type="text"], textarea{
   width: 100px;
   height: 25px;
 }
+
+// ドロップメニューをホバー表示
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
