--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,6 +1,19 @@
 <p> ここは、<%=@user.name%>さんのページです。
 </p>
 
+<div class="col-md-3">
+ <div class="card p-2">
+   <%= image_tag current_user.avatar.url, class: "card-img-top rounded-circle" %>
+   <div class="card-body">
+     <h4 class="card-title"><%= "@#{@user.name}" %></h4>
+     <p class="card-text">
+       <span class="text-secondary">ユーザー情報がここに入ります。</span>
+     </p>
+   </div>
+ </div>
+</div>
+
+
 <h3>all To do</h3>
 <%  @cate_does.each do |cate_do| %>
   <tr>
