--- a/app/views/to_do_items/calendar.html.erb
+++ b/app/views/to_do_items/calendar.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(url: '/user_home',model: ToDoItem.new, local: false) do |f| %>
+<%= form_with(url: '/user_home',model: ToDoItem.new, local: true) do |f| %>
 
 <div class="field">
  <%= f.label :start_date  %>
