--- a/app/views/to_do_items/index.html.erb
+++ b/app/views/to_do_items/index.html.erb
@@ -8,10 +8,8 @@
       <th>User</th>
       <th>Category</th>
       <th>Title</th>
-      <th>Start date</th>
-      <th>Start time</th>
-      <th>End date</th>
-      <th>End time</th>
+      <th>Start datetime</th>
+      <th>End datetime</th>
       <th>Place</th>
       <th>Memo</th>
       <th>Attachment</th>
@@ -28,10 +26,8 @@
         <td><%= to_do_item.user_id %></td>
         <td><%= to_do_item.category_id %></td>
         <td><%= to_do_item.title %></td>
-        <td><%= to_do_item.start_date %></td>
-        <td><%= to_do_item.start_time %></td>
-        <td><%= to_do_item.end_date %></td>
-        <td><%= to_do_item.end_time %></td>
+        <td><%= to_do_item.start_at %></td>
+        <td><%= to_do_item.end_at %></td>
         <td><%= to_do_item.place %></td>
         <td><%= to_do_item.memo %></td>
         <td><%= to_do_item.attachment %></td>
