--- a/app/views/to_do_items/show.html.erb
+++ b/app/views/to_do_items/show.html.erb
@@ -16,23 +16,13 @@
 </p>
 
 <p>
-  <strong>Start date:</strong>
-  <%= @to_do_item.start_date %>
+  <strong>Start datetime:</strong>
+  <%= @to_do_item.start_at %>
 </p>
 
 <p>
-  <strong>Start time:</strong>
-  <%= @to_do_item.start_time %>
-</p>
-
-<p>
-  <strong>End date:</strong>
-  <%= @to_do_item.end_date %>
-</p>
-
-<p>
-  <strong>End time:</strong>
-  <%= @to_do_item.end_time %>
+  <strong>End datetime:</strong>
+  <%= @to_do_item.end_at %>
 </p>
 
 <p>
