homeのスタイリング=>サイドバーをつける 本日のtodoが表示されるようにした カテゴリーをサイドバーへ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,19 @@
 
   <body>
      <%= render "layouts/header" %>
-     <div class="container py-4 px-0">
+     <div class="container py-2 px-0">
       <%= flash_message(flash[:success], :success) if flash[:success] %>
       <%= flash_message(flash[:error], :danger) if flash[:error] %>
       <%= flash_message(flash[:alert], :warning) if flash[:alert] %>
       <%= flash_message(flash[:notice], :info) if flash[:notice] %>
-      <%= yield %>
+
+
+
+       <div id="left"> <%= yield :sidebar_left %></div>
+              <div id ="center"><%= yield %> </div>
+
+    <%= render "layouts/footer" %>
+
     </div>
   </body>
 </html>
