--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,11 +17,12 @@
 @import "bootstrap";
 @import "tempusdominus-bootstrap-4.css";
 
-input[type="text"], textarea{
+/*input[type="text"], textarea{
   box-sizing: border-box;
-  width: 500px;
+  width: 300px;
   padding: 5px;
 }
+*/
 
 .category_tab{
 
@@ -32,4 +33,54 @@ input[type="text"], textarea{
 // ドロップメニューをホバー表示
 .dropdown:hover .dropdown-menu {
     display: block;
+}
+
+.to_do_input{
+  font-size:16px;
+  width: 500px;
+  height: 40px;
+  margin: 2px;
+}
+
+.category_text{
+  font-size: 12px;
+  width: 120px;
+
+}
+
+#datetimepicker1{
+ font-size: 12px;
+ width: 200px;
+ height: 34px;
+ margin-right: 0px;
+}
+#datetimepicker2{
+ font-size: 12px;
+ width: 200px;
+ height: 34px;
+}
+
+
+.container{
+/*width: 1800px;
+margin: 0 auto;
+*/
+}
+
+#left{
+ background: #EEEEEE;
+  float: left;
+  width: 20%;
+   height: 1000px;
+  margin-right: 1%;
+}
+
+#center{
+  float: left;
+  width: 79%;
+ height: 1000px;
+/* background-image: url("main/High Sierra.jpg");
+   background-size: 1000px;
+   background-repeat: no-repeat;
+*/
 }
