--- a/app/views/to_do_items/calendar.html.erb
+++ b/app/views/to_do_items/calendar.html.erb
@@ -1,17 +1,20 @@
 <%= form_with(url: '/user_home',model: ToDoItem.new, local: true) do |f| %>
 
-<div class="field">
- <%= f.label :start_at  %>
- <%= f.datetime_select :start_at %>
-</div>
+<div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+        <%= f.text_field(:start_at, placeholder: '開始時間',
+          class: "form-control datetimepicker-input", data: {target:"#datetimepicker1"}) %>
+        <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+          <div class="input-group-text"><i class="fas fa-calendar-plus"></i></div>
+        </div>
+      </div>
 
-
-<div class="field">
- <%= f.label :end_at %>
- <%= f.datetime_select :end_at %>
- </div>
-
- <div class="actions">
+      <div class="input-group date" id="datetimepicker2" data-target-input="nearest">
+              <%= f.text_field(:end_at, placeholder: '終了時間',
+                class: "form-control datetimepicker-input", data: {target:"#datetimepicker2"}) %>
+              <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
+                <div class="input-group-text"><i class="fas fa-calendar-plus"></i></div>
+              </div>
+            </div>
    <%= f.submit %>
  </div>
 <% end %>
