--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *= require material_icons
+ *= require font-awesome
  *= require_tree ./main
  *= require_self
  */
@@ -51,13 +52,11 @@
 #datetimepicker1{
  font-size: 12px;
  width: 200px;
- height: 34px;
  margin-right: 0px;
 }
 #datetimepicker2{
  font-size: 12px;
  width: 200px;
- height: 34px;
 }
 
 
@@ -82,5 +81,6 @@ margin: 0 auto;
 /* background-image: url("main/High Sierra.jpg");
    background-size: 1000px;
    background-repeat: no-repeat;
+   background-attachment: fixed;
 */
 }
