to_do_itemをカテゴリー別にソートしたビューを作成した to_do_itemにcompleteカラムを追加した。(完了したかどうかのプール値)。 今日のtodoにチェックボックスを追加した。チェックを入れてボタンを押すとtodoが消えるようにした(ajax)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,9 +26,7 @@
 */
 
 .category_tab{
-
-  width: 100px;
-  height: 25px;
+background: #EEEEEE;
 }
 
 // ドロップメニューをホバー表示
@@ -41,6 +39,7 @@
   width: 500px;
   height: 40px;
   margin: 2px;
+
 }
 
 .category_text{
