--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,10 +2,10 @@
 
 <h1>Categories</h1>
 
-<table>
+<table class="table table-bordered table-hover">
   <thead>
     <tr>
-    
+
       <th>Category name</th>
       <th>Category color</th>
       <th>Background</th>
