--- a/app/views/to_do_items/_form.html.erb
+++ b/app/views/to_do_items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: to_do_item, local: true) do |form| %>
+<%= form_with(model: to_do_item, local: true) do |f| %>
   <% if @to_do_item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(to_do_item.errors.count, "error") %> prohibited this to_do_item from being saved:</h2>
@@ -12,67 +12,65 @@
   <% end %>
 
 
-  <div class="field">
-    <%= form.label :category_id %>
-    <%= form.number_field :category_id %>
+  <%= f.label :contents, "to doを追加する" %><br>
+
+  <%= f.text_field :title, placeholder: 'to do入力',class:"form-control to_do_input " %>
+  <%= f.select :category_id, category_selects,{:prompt => "category?"}, {:class => "btn category_tab"} %>
+
+  <div class="form-inline">
+    <span class="input-group date" id="datetimepicker1" data-target-input="nearest">
+         <%= f.text_field(:start_at, placeholder: '開始時間',
+            class: "form-control datetimepicker-input", data: {target:"#datetimepicker1"}) %>
+         <span class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+              <span class="input-group-text"><i class="fas fa-calendar-plus"></i></span>
+         </span>
+    </span>
+
+    <span class="input-group date" id="datetimepicker2" data-target-input="nearest">
+           <%= f.text_field(:end_at, placeholder: '終了時間',
+               class: "form-control datetimepicker-input", data: {target:"#datetimepicker2"}) %>
+           <span class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
+                 <span class="input-group-text"><i class="fas fa-calendar-plus"></i></span>
+           </span>
+    </span>
   </div>
 
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= f.label :place %>
+    <%= f.text_field :place %>
   </div>
 
   <div class="field">
-    <%= form.label :start_date %>
-    <%= form.date_select :start_date %>
+    <%= f.label :memo %>
+    <%= f.text_area :memo %>
   </div>
 
   <div class="field">
-    <%= form.label :start_time %>
-    <%= form.time_select :start_time %>
+    <%= f.label :attachment %>
+    <%= f.text_field :attachment %>
   </div>
 
   <div class="field">
-    <%= form.label :end_date %>
-    <%= form.date_select :end_date %>
+    <%= f.label :rank %>
+    <%= f.number_field :rank %>
   </div>
 
   <div class="field">
-    <%= form.label :end_time %>
-    <%= form.time_select :end_time %>
+    <%= f.label :remind %>
+    <%= f.check_box :remind , {}, "する", "しない"%>
   </div>
 
   <div class="field">
-    <%= form.label :place %>
-    <%= form.text_field :place %>
+    <%= f.label :remind_time %>
+    <%= f.datetime_select :remind_time %>
   </div>
 
-  <div class="field">
-    <%= form.label :memo %>
-    <%= form.text_area :memo %>
-  </div>
+<div class="field">
+    <%= f.label :complete %>
+    <%= f.check_box :complete, {},  "おわった", "まだ"%>
+</div>
 
-  <div class="field">
-    <%= form.label :attachment %>
-    <%= form.text_field :attachment %>
-  </div>
+  <%= f.submit "登録する", :class=>"btn btn-info" %>
 
-  <div class="field">
-    <%= form.label :rank %>
-    <%= form.number_field :rank %>
-  </div>
 
-  <div class="field">
-    <%= form.label :remind %>
-    <%= form.check_box :remind %>
-  </div>
-
-  <div class="field">
-    <%= form.label :remind_time %>
-    <%= form.datetime_select :remind_time %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
