--- a/app/views/to_do_items/index.html.erb
+++ b/app/views/to_do_items/index.html.erb
@@ -2,20 +2,19 @@
 
 <h1>all</h1>
 
-<table>
+<table class="table table-bordered table-hover">
   <thead>
     <tr>
+      <th>complete</th>
       <th>Title</th>
       <th>Category</th>
 
       <th>Start datetime</th>
       <th>End datetime</th>
       <th>Place</th>
-      <th>Memo</th>
-      <th>Attachment</th>
+
       <th>Rank</th>
-      <th>Remind</th>
-      <th>Remind time</th>
+
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,17 +22,28 @@
   <tbody>
     <% @to_do_items.each do |to_do_item| %>
       <tr>
+        <% if to_do_item.complete == "おわった" %>
+           <td> 完了!</td>
+         <% else %>
+          <td> 未</td>
+        <% end %>
+
         <td><%= to_do_item.title %></td>
         <td><%= to_do_item.category.category_name %></td>
-
-        <td><%= to_do_item.start_at%></td>
-        <td><%= to_do_item.end_at %></td>
+        <% if to_do_item.start_at.blank? %>
+         <td></td>
+         <% else %>
+        <td><%= to_do_item.start_at.strftime('%Y年%m月%d日%H時%M分')%></td>
+        <% end %>
+        <% if to_do_item.end_at.blank? %>
+         <td></td>
+         <% else %>
+        <td><%= to_do_item.end_at.strftime('%Y年%m月%d日%H時%M分')%></td>
+        <% end %>
         <td><%= to_do_item.place %></td>
-        <td><%= to_do_item.memo %></td>
-        <td><%= to_do_item.attachment %></td>
+
         <td><%= to_do_item.rank %></td>
-        <td><%= to_do_item.remind %></td>
-        <td><%= to_do_item.remind_time %></td>
+
         <td><%= link_to 'Show', to_do_item %></td>
         <td><%= link_to 'Edit', edit_to_do_item_path(to_do_item) %></td>
         <td><%= link_to 'Destroy', to_do_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
