--- a/app/views/users/test.html.erb
+++ b/app/views/users/test.html.erb
@@ -1,8 +1,7 @@
-<%  @cate_does.each do |cate_do| %>
-  <tr>
-  <td><%= cate_do[0] %></td>
-  <td><%= cate_do[1] %></td>
-  <td><%= cate_do[2] %></td>
-  <br>
-  </tr>
+<h1>Ajaxを使ってみよう</h1>
+
+<h2>ここが変更します </h2>
+<%= form_tag(url_for(:action => 'test'), :remote => true) do %>
+  <%= text_field_tag :title %>
+  <%= submit_tag "タイトルを変更する" %>
 <% end %>
