fullcalendarを導入.表示できた DBの反映うまくいかない

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *= require material_icons
  *= require font-awesome
+ *= require fullcalendar
  *= require_tree ./main
  *= require_self
  */
@@ -58,6 +59,30 @@ background: #EEEEEE;
  width: 200px;
 }
 
+#calendar {
+	max-width: 240px;
+
+	margin: 0 auto;
+}
+.fc-basic-view .fc-body .fc-row {
+	min-height: 0.5em !important;
+}
+
+.fc button {
+	height: 2em !important;
+	padding: 0 .1em !important;
+
+	/* text & cursor */
+	font-size: 1e.5m !important;
+}
+.fc-center{
+   font-size: 0.5em !important;;
+
+}
+
+
+
+
 
 .container{
 /*width: 1800px;
@@ -68,14 +93,14 @@ margin: 0 auto;
 #left{
  background: #EEEEEE;
   float: left;
-  width: 20%;
+  width: 27%;
    height: 1000px;
   margin-right: 1%;
 }
 
 #center{
   float: left;
-  width: 79%;
+  width: 72%;
  height: 1000px;
 /* background-image: url("main/High Sierra.jpg");
    background-size: 1000px;
